# EMIT-Data-Resources

./: Dockerfile  check_versions.py  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
python/how-tos/: How_to_Convert_to_ENVI.ipynb  How_to_find_and_access_EMIT_data.ipynb
python/tutorials/: Generating_Methane_Spectral_Fingerprint.ipynb
