[tool.poetry]
name        = "emission-analysis"
version     = "0.1.0"
description = "Process EMIT xarray data with EarthAccess and geospatial libs"
authors = ["Paul Kim <pau_kim@lanl.gov>"]
package-mode    = false    # â† disable installing the project itself

[tool.poetry.dependencies]
python        = "^3.10"
# Core data libraries
numpy         = "^1.25"
pandas        = "^2.0"
xarray        = "^2024.1"
netCDF4       = "^1.6"
# Geospatial / raster
geopandas     = "0.13.2"
shapely       = "2.0.1"
rasterio      = "^1.4"
rioxarray     = "^0.15"
# gdal = "3.10.3"
# Remote-access / filesystem
earthaccess   = "*"        # or pin to the appropriate PyPI/GitHub version
fsspec   = "^2024.1"
s3fs     = "^2024.1"# Spectral imaging

spectral      = "^0.23"     # provides spectral.io.envi
scikit-image  = "^0.20"

# Local modules
# emit-tools    = { path = "../modules", develop = true }
fiona = "1.9.5"
pyproj = "3.5"
holoviews = "^1.20.2"

[tool.poetry.group.dev.dependencies]
jupyter       = "^1.0"
ipykernel     = "^6.0"
pytest        = "^7.0"
black         = "^23.1"
isort         = "^5.12"

[build-system]
requires      = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"